# gst-plugin-omap4videodecbin

./: Makefile.am  README  configure.ac
gst/: Makefile.am  gstomap4videodecbin.c  gstomap4videodecbin.vala
